# mindcare-crewai

./: .env.example  README.md  pyproject.toml
src/mindcare/: crew.py  main.py
src/mindcare/config/: agents.yaml  tasks.yaml
