[project]
name = "mindcare"
version = "0.1.0"
description = "mindcare using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
mindcare = "mindcare.main:run"
run_crew = "mindcare.main:run"
train = "mindcare.main:train"
replay = "mindcare.main:replay"
test = "mindcare.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
